scene transform started

--- a/tp1-etudiant-update/.vscode/settings.json
+++ b/tp1-etudiant-update/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "C_Cpp.default.compilerPath": ""
+    "C_Cpp.default.compilerPath": "",
+    "files.associations": {
+        "iostream": "cpp",
+        "sstream": "cpp"
+    }
 }
